--- a/frontend/app/src/main/res/layout/activity_main.xml
+++ b/frontend/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,7 @@
             android:src="@drawable/ic_baseline_arrow_forward_ios_24"></ImageView>
 
         <ImageView
+            android:id="@+id/online"
             android:layout_width="30dp"
             android:layout_height="42dp"
             android:layout_marginStart="220dp"
